[package]
authors = [ "Jeremie Veillet <jeremie.veillet@gmail.com>" ]
categories = ["command-line-utilities"]
description = "Update config vars for all your Heroku apps at once via the command line."
homepage = "https://gitlab.com/jveillet/heroku-env-rs"
keywords = ["cli", "heroku", "config vars"]
license = "GNU GPLv3"
name = "heroku-env-rs"
readme = "README.md"
repository = "https://gitlab.com/jveillet/heroku-env-rs"
version = "0.1.7"

[[bin]]
name = "hke"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
reqwest = "0.9.9"
dotenv = "0.13.0"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_yaml = "0.8.8"
serde_json = "1.0.38"
