[package]
authors = [ "Jeremie Veillet <jeremie.veillet@gmail.com>" ]
categories = ["command-line-utilities"]
description = "Update config vars for all your Heroku apps at once via the command line."
homepage = "https://gitlab.com/jveillet/heroku-env-rs"
keywords = ["cli", "heroku", "config vars"]
license = "GNU GPLv3"
name = "heroku-env-rs"
readme = "README.md"
repository = "https://gitlab.com/jveillet/heroku-env-rs"
version = "0.1.8"

[[bin]]
name = "hke"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
reqwest = "0.9.20"
dotenv = "0.14.1"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_yaml = "0.8.9"
serde_json = "1.0.40"
